# proiect-poo

./: CMakeLists.txt  LICENSE  README.md  build.sh  debug.sh  main.cpp
.github/actions/configure-cmake/: action.yml
.github/workflows/: cmake.yml  release.yml
assets/: .gitignore  builder.js  index.html  package-lock.json  package.json  svelte.config.js  svgo.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
assets/src/: App.svelte  global.d.ts
assets/src/components/canvas/: Canvas.svelte  canvas.ts  draw.ts  element.ts
assets/src/components/menus/: CallbackTextarea.svelte
assets/src/components/menus/pc/: PCMenu.svelte  menu.ts
assets/src/components/menus/pc/apps/: CMD.svelte  Desktop.svelte  IPConfig.svelte
assets/src/components/menus/pc/apps/cmd/: commands.ts
assets/src/components/toolbar/: Toolbar.svelte  toolbar.ts
assets/src/endpoints/: main.ts  pc.ts
assets/src/endpoints/pc/: global.d.ts
assets/src/lib/: workspace.ts
assets/src/lib/classes/: command.ts
assets/src/lib/types/: device.ts  entity.ts
assets/src/types/: device.ts
examples/: address.cpp  address.h  device.cpp  device.h  interface.cpp  interface.h  main.cpp
examples/topologies/: lab3.h  lab9.h  labs.cpp  labs.h
src/date/: address.h  ipv4.cpp  ipv4.h  ipv6.cpp  ipv6.h  macaddress.cpp  macaddress.h  subnetaddress.cpp  subnetaddress.h
src/date/osi/: datalink.cpp  datalink.h  network.cpp  network.h  osiexcept.cpp  osiexcept.h  transport.cpp  transport.h
src/device/: adapter.cpp  adapter.h  device.cpp  device.h  ethernet.cpp  ethernet.h
src/device/devices/: end_device.cpp  end_device.h  l2switch.cpp  l2switch.h  router.cpp  router.h  sniffer.cpp  sniffer.h
src/protocoale/: arp.cpp  arp.h  http.cpp  http.h  icmp.cpp  icmp.h  payload.h
src/topologie/: device_factory.cpp  device_factory.h  jsonify_data.cpp  jsonify_data.h  uiexcept.cpp  uiexcept.h  uihook.cpp  uihook.h  workspace.cpp  workspace.h
